--- a/index.html
+++ b/index.html
@@ -284,7 +284,7 @@
                         <div class="box">
 
                             <legend>Number of gadgets are now at present in your home?</legend>
-                            <div><input type="number" id="number" placeholder="enter here" class="g-num" style="background-color: aliceblue;" value="number" min="0" required></div>
+                            <div><input type="number" id="number" placeholder="enter no." class="g-num" style="background-color: aliceblue;" value="number" min="0" required></div>
 
 
                         </div>
