--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>survey website</title>
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@700&family=Goldman:wght@700&family=Modak&family=Orbitron:wght@500&family=Vidaloka&display=swap" rel="stylesheet">
-    <link rel="stylesheet" type="text/css" href="style.css">
+    <link rel="stylesheet" href="style.css" type="text/css">
 </head>
 
 <body>
